# RIP

./: Cargo.toml  README.md  build.rs  sample_config.json  tmp.json
.cargo/: config.toml
docs/: nodes.html  stylesheet.css
proto/: message.proto  response.proto
rip/: bin.rs  common.rs  lib.rs  nodes.rs
rip/common/: data_bus.rs
rip/gpgpu/: histogram.rs
rip/network/: manager.rs
rip/nodes/: node_parser.rs  processors.rs
sample_configs/: chroma_key.json  color_spaces.json  crop.json  every_node.json  reflected_x_axis.json  reflected_y_axis.json  tonemap.json  transform.json  two_inputs_two_outputs.json
shaders/: adaptive_threshold.comp.glsl  arithmetic.comp.glsl  blur.comp.glsl  cc_boundary_analysis.comp.glsl  cc_global.comp.glsl  cc_local.comp.glsl  cc_reset.comp.glsl  chroma_key.comp.glsl  clear_histogram.comp.glsl  color_space_convert.comp.glsl  crop.comp.glsl  difference.comp.glsl  histogram.comp.glsl  intensify.comp.glsl  inverse.comp.glsl  monochrome.comp.glsl  noise.comp.glsl  object_highlight.comp.glsl  overlay.comp.glsl  pattern.comp.glsl  threshold.comp.glsl  tonemap.comp.glsl  tonemap_generate_curve.comp.glsl  transform.comp.glsl
shaders/include/: color_space.glsl
src/: common.rs  lib.rs  nodes.rs
src/common/: data_bus.rs
src/gpgpu/: histogram.rs
src/nodes/: agl.rs
swspp/: bin.rs  gpgpu.rs  lib.rs  network.rs  nodes.rs
swspp/common/: shader_utils.rs
swspp/gpgpu/: histogram.rs
swspp/network/: manager.rs
swspp/nodes/: agl.rs  finishers.rs  node_parser.rs  (+2 more)
theia/: gui.py  main.py  message_pb2.py  network.py  response_pb2.py
(+35 files in other folders)
