[package]
name = "swspp"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[lib]
name = "swspp"
path = "swspp/lib.rs"

[[bin]]
name = "swspp"
path = "swspp/bin.rs"

[profile.release]
opt-level = 3

[dependencies]
runa = {path = "../runa_lib"}
lazy_static = "1.4.0"
json = "0.12.4"
stb_image = "0.2.4"
stb_image_write_rust = "1.16.1"