[package]
name = "rip"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[lib]
name = "rip"
path = "rip/lib.rs"

[[bin]]
name = "rip"
path = "rip/bin.rs"

[profile.release]
opt-level = 3

[build-dependencies]
protobuf-codegen = "3"

[dependencies]
zmq = "0.10.0"
protobuf = "3.2.0"
runa = {git = "https://github.com/JordanHendl/runa"}
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled"] }
lazy_static = "1.4.0"
json = "0.12.4"
stb_image = "0.2.4"
stb_image_write_rust = "1.16.1"